examples/test/testpolicy6556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6556
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key25: value22
      key6: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value48
          key46: value19
      podSelector:
        matchLabels:
          key8: value35
          key4: value0
